src/tests/invalid/given_an_end_state_it_should_not_be_possible_to_add_a_transition.stderr
error[E0599]: no method named `only_transition` found for associated type `<<impl InitialState<State, Event> as InitialState<State, Event>>::TriggerState as TriggerState<State, Event>>::TransitionState` in the current scope
 --> src/tests/invalid/given_an_end_state_it_should_not_be_possible_to_add_a_transition.rs:7:14
  |
7 |             .only_transition(Event::Stop, State::Stopped).unwrap()
  |              ^^^^^^^^^^^^^^^ method not found in `<<impl InitialState<State, Event> as InitialState<State, Event>>::TriggerState as TriggerState<State, Event>>::TransitionState`
